Updated and Completed